--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Vite + TS</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div class="container">
+      <div id="app"></div>
+    </div>
+
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
